feat: Implement Beta and Information Ratio metrics for backtest
- Add benchmark_manager.py for TOPIX data management with incremental updates
- Implement daily equity tracking in backtest simulation loop
- Add calculate_beta() and calculate_tracking_error_and_ir() functions in metrics.py
- Extend BacktestResult model with beta, tracking_error, information_ratio fields
- Update report formatting to display Beta, TE%, and IR columns
- Fix syntax errors in report.py (escape character issues)
- Create unified start_backtest.py as single entry point for all backtests
- All data sources now truly incremental (TOPIX, prices, financials, trades, metadata)
- Beta measures systematic risk (correlation with TOPIX market movements)
- Information Ratio measures alpha quality (alpha/tracking_error)
- Fix max drawdown calculation using equity curve instead of undefined variable

--- a/backtest_config.json
+++ b/backtest_config.json
@@ -6,7 +6,7 @@
     "starting_capital_jpy": 5000000,
     "buy_threshold": 60,
     "sell_threshold": 45,
-    "include_benchmark": false,
+    "include_benchmark": true,
     "strategies": [
       {
         "scorer": "SimpleScorer",
