feat: 重构CLI架构并添加多策略回测功能
主要更新:
- 统一CLI入口(main.py): fetch/signal/backtest/portfolio命令
- 新增策略加载器(strategy_loader.py): 支持策略列表和全策略组合测试
- 新增输出日志器(output_logger.py): 自动保存回测结果到output/目录
- 集成LotSizeManager: 单股票回测现在正确处理最小购买单位
- 新增--years参数: 支持指定回测最近x年数据
- 更新数据到2026-01-14

功能特性:
- 策略选择: 支持默认/列表指定/全策略组合三种模式
- 时间过滤: --years参数优先于--start/--end
- 最小购买单位: 从config.json加载lot_sizes配置
- 信号执行时序: T日信号在T+1日开盘价执行
- 输出日志: 所有回测结果自动保存txt文件

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 requests>=2.31.0
 pandas>=2.0.0
+python-dateutil>=2.8.0
 # pandas_ta requires numba which doesn't support Python 3.14 yet
 # Using ta-lib alternative or manual indicator calculations
 # pandas_ta>=0.3.14b
