--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ portfolio_backtest_results/
 backtest_debug.txt
 backtest_results_*.csv
 trade_analysis_*.md
+strategy_evaluation/
 
 # Config files (may contain API keys)
 config.json
