feat: Update .gitignore, add production system, CLI framework, and comprehensive testing
- Modified .gitignore: Refined data exclusion rules (exclude parquet/large files but keep config jsons)
- Added/Updated: data/monitor_list*.json, data/jpx_final_list.csv (kept in version control)
- Removed: Old strategies, deprecated analysis files (all_strategies.json, etc.)
- Added: Complete production system (src/production/), new CLI framework (src/cli/)
- Added: Market data builder for unified signal interface
- Added: Comprehensive test suite (tests/ directory)
- Reorganized: Documentation files moved to docs/ directory
- Updated: Backtest engines, strategy evaluator, signal generator for Phase 5+ production

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,21 @@ env/
 .env
 .env.local
 
-# Data files (do not version control)
-data/
+# Data (ignore large parquet files but keep configuration)
+# Large data files (should NOT be versioned)
+data/features/
+data/benchmarks/
+data/raw_trades/
+data/raw_financials/
+data/raw_prices/
+data/universe/
+data/metadata/
+*.parquet
 
+# Keep these data files (configuration, not data)
+!data/monitor_list*.json
+!data/jpx_final_list.csv
+!data/production_monitor_list.json
 
 # IDE
 .vscode/
@@ -57,6 +69,17 @@ backtest_debug.txt
 backtest_results_*.csv
 trade_analysis_*.md
 strategy_evaluation/
+
+# Test outputs
+test_*.txt
+test_*.json
+test_*.csv
+
+# Production state snapshots (regenerated daily)
+production_state.json
+
+# Trade history and analysis outputs
+trade_history.json
 
 # Config files (may contain API keys)
 config.json
