--- a/config.json.example
+++ b/config.json.example
@@ -3,29 +3,49 @@
     "monitor_list_file": "data/monitor_list.txt",
     "data_dir": "data"
   },
-  
+
   "backtest": {
     "start_date": "2021-01-01",
     "end_date": "2026-01-08",
     "starting_capital_jpy": 5000000,
     "output_dir": "backtest_results"
   },
-  
+
   "portfolio": {
     "max_positions": 5,
-    "max_position_pct": 0.30,
+    "max_position_pct": 0.3,
     "min_position_pct": 0.05,
     "output_dir": "portfolio_backtest_results"
   },
-  
+
   "lot_sizes": {
     "1321": 1,
     "1343": 1,
     "default": 100
   },
-  
+
   "default_strategies": {
     "entry": "SimpleScorerStrategy",
     "exit": "ATRExitStrategy"
+  },
+
+  "production": {
+    "monitor_list_file": "data/production_monitor_list.json",
+    "state_file": "production_state.json",
+    "signal_file_pattern": "output/signals/{date}.json",
+    "report_file_pattern": "output/report/{date}.md",
+    "history_file": "trade_history.json",
+    "max_positions_per_group": 5,
+    "max_position_pct": 0.3,
+    "buy_threshold": 65,
+    "strategy_groups": [
+      {
+        "id": "group_main",
+        "name": "主策略组",
+        "initial_capital": 3000000,
+        "entry_strategy": "MACDCrossoverStrategy",
+        "exit_strategy": "ScoreBasedExitStrategy"
+      }
+    ]
   }
 }
