--- a/config.json.example
+++ b/config.json.example
@@ -26,7 +26,7 @@
 
   "default_strategies": {
     "entry": "SimpleScorerStrategy",
-    "exit": "ATRExitStrategy"
+    "exit": "MVX_N9_R3p5_T1p6_D20_B15"
   },
 
   "overlays": {
@@ -57,7 +57,7 @@
         "name": "主策略组",
         "initial_capital": 3000000,
         "entry_strategy": "MACDCrossoverStrategy",
-        "exit_strategy": "ScoreBasedExitStrategy"
+        "exit_strategy": "MVX_N9_R3p5_T1p6_D20_B15"
       }
     ]
   }
