--- a/config.json.example
+++ b/config.json.example
@@ -50,6 +50,8 @@
 
   "production": {
     "monitor_list_file": "data/production_monitor_list.json",
+    "fetch_universe_file": "data/fetch_universe.json",
+    "sector_pool_file": null,
     "state_file": "production_state.json",
     "signal_file_pattern": "output/signals/{date}.json",
     "report_file_pattern": "output/report/{date}.md",
