Improve ETL dedup logic and add financial cleanup task

--- a/config.json.example
+++ b/config.json.example
@@ -49,13 +49,13 @@
   },
 
   "production": {
-    "monitor_list_file": "data/production_monitor_list.json",
-    "fetch_universe_file": "data/fetch_universe.json",
-    "sector_pool_file": null,
-    "state_file": "production_state.json",
-    "signal_file_pattern": "output/signals/{date}.json",
-    "report_file_pattern": "output/report/{date}.md",
-    "history_file": "trade_history.json",
+    "monitor_list_file": "G:\\My Drive\\AI-Stock-Sync\\state\\production_monitor_list.json",
+    "fetch_universe_file": "G:\\My Drive\\AI-Stock-Sync\\state\\fetch_universe.json",
+    "sector_pool_file": "G:\\My Drive\\AI-Stock-Sync\\universe\\sector_pool",
+    "state_file": "G:\\My Drive\\AI-Stock-Sync\\state\\production_state.json",
+    "signal_file_pattern": "G:\\My Drive\\AI-Stock-Sync\\signals\\{date}.json",
+    "report_file_pattern": "G:\\My Drive\\AI-Stock-Sync\\reports\\{date}.md",
+    "history_file": "G:\\My Drive\\AI-Stock-Sync\\state\\trade_history.json",
     "max_positions_per_group": 8,
     "max_position_pct": 0.2,
     "buy_threshold": 65,
